# orionbelt-semantic-layer-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  server.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  mcp-audit.yml  pypi-publish.yml
docs/integrations/: crewai.md  google-adk.md  langchain.md  n8n.md  openai-agents-sdk.md
scripts/: release.sh
tests/: conftest.py  test_server.py
