[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orionbelt-semantic-layer-mcp"
version = "1.0.0"
description = "Thin MCP server for OrionBelt Semantic Layer — delegates to REST API"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "Ralf Becher, RALFORION d.o.o.", email = "ralf.becher@web.de"}
]
keywords = ["mcp", "semantic-layer", "orionbelt", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.1,<4",
    "httpx>=0.28",
    "pydantic-settings>=2.12",
]

[project.urls]
Homepage = "https://github.com/ralfbecher/orionbelt-semantic-layer-mcp"
Repository = "https://github.com/ralfbecher/orionbelt-semantic-layer-mcp"
Issues = "https://github.com/ralfbecher/orionbelt-semantic-layer-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]
